[tool.poetry]
name = "myhmbiz-api"
version = "0.1.0"
description = "General repo for myhmbiz APIs - to run on GCP"
authors = ["bulldoguk <57550309+bulldoguk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
fastapi = "^0.81.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
